<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_100"
    android:padding="@dimen/padding_main"
    tools:context=".screens.createmasterpassword.CreateMasterPasswordActivity">

    <TextView
        android:id="@+id/master_password_header"
        style="@style/TextAppearanceHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/creating_new_master_password"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/master_password_description"
        style="@style/TextAppearanceDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_between_components"
        android:text="@string/master_password_desc"
        app:layout_constraintTop_toBottomOf="@id/master_password_header" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/new_master_password_layout"
        style="@style/InputLayoutPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_master_password"
        app:layout_constraintTop_toBottomOf="@id/master_password_description">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/new_master_password"
            style="@style/Input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_between_components"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@id/master_password_description" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirm_new_master_password_layout"
        style="@style/InputLayoutPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_master_password_again"
        app:layout_constraintTop_toBottomOf="@id/new_master_password_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirm_new_master_password"
            style="@style/Input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_between_components"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/proceed"
        style="@style/ButtonSolid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_between_components"
        android:text="@string/proceed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirm_new_master_password_layout" />

    <Button
        android:id="@+id/cancel"
        style="@style/ButtonOutlined"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_between_components"
        android:text="@string/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/proceed" />
</androidx.constraintlayout.widget.ConstraintLayout>