...
    android:layout_height="match_parent"
    android:background="@color/grey_100"
    android:padding="@dimen/padding_main"
    tools:context=".screens.masterpassword.MasterPasswordActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
...
